--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -26,6 +26,7 @@
                             <th>{{ 'user.fullname'|trans }}</th>
                             <th>{{ 'user.email'|trans }}</th>
                             <th>{{ 'permissions'|trans }}</th>
+                            <th>{{ 'security.authentication'|trans }}</th>
                             <th>{{ 'description'|trans }}</th>
                         </tr>
                     </thead>
