--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="columns">
             <div class="column full-width">
-                <div class="tabs" data-tab="{{ tab }}">
+                <div class="tabs" id="tabs-user" data-tab="{{ tab }}">
                     <ul>
                         <li><a href="{{ path('admin_tab_user_details', {'id': user.id}) }}">{{ user.fullname }}</a></li>
                     </ul>
