Fix the bug about disabling jQuery UI button

--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -9,8 +9,8 @@
             <div class="column full-width">
                 <button type="button" id="btn-create">{{ 'button.create'|trans }}</button>
                 <span class="buttonset">
-                    <button type="button" id="btn-disable">{{ 'button.disable'|trans }}</button>
-                    <button type="button" id="btn-enable">{{ 'button.enable'|trans }}</button>
+                    <button type="button" id="btn-disable" disabled="disabled">{{ 'button.disable'|trans }}</button>
+                    <button type="button" id="btn-enable" disabled="disabled">{{ 'button.enable'|trans }}</button>
                 </span>
             </div>
         </div>
