--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -10,6 +10,7 @@
         {{ form_row(form.password) }}
         {{ form_row(form.confirmation) }}
         {{ form_row(form.locale) }}
+        {{ form_row(form.theme) }}
         {{ form_row(form.admin) }}
         {{ form_row(form.disabled) }}
     </fieldset>
