Reload on locale or theme change

--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -70,7 +70,11 @@
             $('#dlg-user').modal({
                 title: '{{ user.fullname }}',
                 success: function() {
+                    {% if user.id == app.user.id %}
+                    window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
+                    {% else %}
                     reloadTab();
+                    {% endif %}
                     return true;
                 }
             });
