--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="columns">
             <div class="column full-width">
-                <table id="users" class="cell-border hover" data-src="{{ path('admin_users_ajax') }}">
+                <table id="users" class="cell-border hover" data-src="{{ path('admin_users_list') }}">
                     <thead>
                         <tr>
                             <th>{{ 'user.username'|trans }}</th>
