Redundancy code [ci skip]

--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -1,6 +1,6 @@
 {% form_theme form 'form.html.twig' %}
 
-<div id="dlg-user" class="dialog">
+<div class="dialog">
     {{ form_start(form) }}
     <fieldset>
         {{ form_row(form.username) }}
