--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -8,6 +8,7 @@
                 <div class="tabs" id="tabs-user" data-tab="{{ tab }}">
                     <ul>
                         <li><a href="{{ path('admin_tab_user_details', {'id': user.id}) }}">{{ user.fullname }}</a></li>
+                        <li><a href="{{ path('admin_tab_user_groups', {'id': user.id}) }}">{{ 'groups'|trans }}</a></li>
                     </ul>
                 </div>
             </div>
