Users list filters

--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -31,6 +31,26 @@
                             <th>{{ 'description'|trans }}</th>
                         </tr>
                     </thead>
+                    <thead>
+                        <tr>
+                            <th><input type="text"></th>
+                            <th><input type="text"></th>
+                            <th><input type="text"></th>
+                            <th>
+                                <select>
+                                    <option value="admin">{{ 'role.administrator'|trans }}</option>
+                                    <option value="user">{{ 'role.user'|trans }}</option>
+                                </select>
+                            </th>
+                            <th>
+                                <select>
+                                    <option value="etraxis">eTraxis</option>
+                                    <option value="ldap">LDAP</option>
+                                </select>
+                            </th>
+                            <th><input type="text"></th>
+                        </tr>
+                    </thead>
                 </table>
             </div>
         </div>
