--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -3,5 +3,6 @@
 {% block menu %}
 
     <a href="{{ path('admin_users') }}">{{ 'users'|trans }}</a>
+    <a href="{{ path('admin_groups') }}">{{ 'groups'|trans }}</a>
 
 {% endblock %}
