--- a/app/Resources/views/admin/groups/tab_details.html.twig
+++ b/app/Resources/views/admin/groups/tab_details.html.twig
@@ -33,7 +33,7 @@
             $tabs.tabs('load', current);
         }
 
-        // Update tab title - gropu name could be changed.
+        // Update tab title - group name could be changed.
         var $tabs = $('#tabs-group');
         $('ul.ui-tabs-nav li[tabindex=0] a', $tabs).text('{{ group.name }}');
 
