--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -220,7 +220,7 @@ footer {
 
 .highlight,
 .error {
-    margin: 10px 0;
+    margin-bottom: 10px;
     padding: 5px 10px;
     text-align: left;
 
