404 error page translated

--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="columns">
             <div class="column">
-                <p>The requested page could not be found.</p>
+                <p>{{ 'error.not_found'|trans }}</p>
             </div>
         </div>
     </div>
