--- a/app/Resources/views/web/security/login.html.twig
+++ b/app/Resources/views/web/security/login.html.twig
@@ -47,6 +47,7 @@
                             <div class="columns control">
                                 <div class="column one-third centered">
                                     <input type="submit" value="{{ 'security.log_in'|trans }}">
+                                    <a class="right" href="{{ path('forgot') }}">{{ 'security.forgot_password'|trans }}</a>
                                 </div>
                             </div>
 
