--- a/app/Resources/views/email/forgot_password.html.twig
+++ b/app/Resources/views/email/forgot_password.html.twig
@@ -4,7 +4,7 @@
 
     <p>You have requested to reset your password at <a href="{{ url('homepage') }}">{{ url('homepage') }}</a>. Please click the link below to do it:</p>
 
-    <p><a href="{{ url('reset', {'token': token}) }}">{{ url('reset', {'token': token}) }}</a></p>
+    <p><a href="{{ url('reset_password', {'token': token}) }}">{{ url('reset_password', {'token': token}) }}</a></p>
 
     <p>Please note that the link expires in 2 hours.</p>
 
