--- a/app/Resources/views/web/security/reset.html.twig
+++ b/app/Resources/views/web/security/reset.html.twig
@@ -15,7 +15,7 @@
                                 {{ form_label(form.password) }}:
                             </div>
                             <div class="column one-third">
-                                {{ form_widget(form.password, { attr: { class: 'full-width', placeholder: 'required'|trans } }) }}
+                                {{ form_widget(form.password, { attr: { class: 'full-width', placeholder: 'required' } }) }}
                             </div>
                         </div>
 
@@ -24,7 +24,7 @@
                                 {{ form_label(form.confirmation) }}:
                             </div>
                             <div class="column one-third">
-                                {{ form_widget(form.confirmation, { attr: { class: 'full-width', placeholder: 'required'|trans } }) }}
+                                {{ form_widget(form.confirmation, { attr: { class: 'full-width', placeholder: 'required' } }) }}
                             </div>
                         </div>
 
