--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -7,8 +7,10 @@
         {{ form_row(form.fullname) }}
         {{ form_row(form.email) }}
         {{ form_row(form.description) }}
+        {% if not user.ldap %}
         {{ form_row(form.password) }}
         {{ form_row(form.confirmation) }}
+        {% endif %}
         {{ form_row(form.locale) }}
         {{ form_row(form.theme) }}
         {{ form_row(form.timezone) }}
