--- a/app/Resources/views/web/base.html.twig
+++ b/app/Resources/views/web/base.html.twig
@@ -6,4 +6,8 @@
     <a href="{{ path('admin') }}">{{ 'administration'|trans }}</a>
     {% endif %}
 
+    {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+    <a href="{{ path('settings') }}">{{ 'settings'|trans }}</a>
+    {% endif %}
+
 {% endblock %}
