--- a/app/Resources/views/web/settings/index.html.twig
+++ b/app/Resources/views/web/settings/index.html.twig
@@ -1,20 +1,21 @@
 {% extends 'web/base.html.twig' %}
 
-{% form_theme form 'form.html.twig' %}
+{% form_theme appearance_form 'form.html.twig' %}
+{% form_theme password_form 'form.html.twig' %}
 
 {% block content %}
 
     <div class="container">
         <div class="columns">
-            <div class="column one-half">
 
-                {{ form_start(form) }}
+            <div class="column one-half">
+                {{ form_start(appearance_form) }}
                 <fieldset>
                     <legend>{{ 'appearance'|trans }}</legend>
 
-                    {{ form_row(form.locale) }}
-                    {{ form_row(form.theme) }}
-                    {{ form_row(form.timezone) }}
+                    {{ form_row(appearance_form.locale) }}
+                    {{ form_row(appearance_form.theme) }}
+                    {{ form_row(appearance_form.timezone) }}
 
                     <div class="columns control">
                         <div class="column one-third">&nbsp;</div>
@@ -24,9 +25,33 @@
                     </div>
 
                 </fieldset>
-                {{ form_end(form) }}
-
+                {{ form_end(appearance_form) }}
             </div>
+
+            {% if not app.user.ldap %}
+
+            <div class="column one-half">
+                {{ form_start(password_form) }}
+                <fieldset>
+                    <legend>{{ 'user.password'|trans }}</legend>
+
+                    {{ form_row(password_form.current_password) }}
+                    {{ form_row(password_form.new_password) }}
+                    {{ form_row(password_form.confirmation) }}
+
+                    <div class="columns control">
+                        <div class="column one-third">&nbsp;</div>
+                        <div class="column two-thirds">
+                            <input type="submit" value="{{ 'user.change_password'|trans }}">
+                        </div>
+                    </div>
+
+                </fieldset>
+                {{ form_end(password_form) }}
+            </div>
+
+            {% endif %}
+
         </div>
     </div>
 
