Error: Call to a member function isLdap() on array

--- a/app/Resources/views/admin/users/dlg_user.html.twig
+++ b/app/Resources/views/admin/users/dlg_user.html.twig
@@ -7,7 +7,7 @@
         {{ form_row(form.fullname) }}
         {{ form_row(form.email) }}
         {{ form_row(form.description) }}
-        {% if not user.ldap %}
+        {% if user is not defined or not user.ldap %}
         {{ form_row(form.password) }}
         {{ form_row(form.confirmation) }}
         {% endif %}
