--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -152,8 +152,7 @@
                     url: '{{ path('dlg_export') }}',
                     title: '{{ 'button.export'|trans }}',
                     success: function() {
-                        var params = $('form').serialize();
-                        params += '&search=' + $table.api().search();
+                        var params = $('form').serialize() + '&' + $.param($table.api().ajax.params());
                         window.location.assign('{{ path('admin_users_csv') }}?' + params);
                         return true;
                     }
