--- a/app/Resources/views/admin/projects/index.html.twig
+++ b/app/Resources/views/admin/projects/index.html.twig
@@ -24,13 +24,13 @@
                             <th>{{ 'description'|trans }}</th>
                         </tr>
                     </thead>
-                    <thead>
+                    <tfoot>
                         <tr>
-                            <th><input type="text"></th>
-                            <th><input type="text"></th>
-                            <th><input type="text"></th>
+                            <td><input type="text"></td>
+                            <td><input type="text"></td>
+                            <td><input type="text"></td>
                         </tr>
-                    </thead>
+                    </tfoot>
                 </table>
             </div>
         </div>
