--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -370,6 +370,38 @@ p.ui-state-error {
 table.dataTable {
     text-align: left;
 
+    tfoot {
+
+        display: table-row-group;
+
+        td {
+            background-color: inherit;
+            background-image: none;
+            border-top-width: 0;
+            border-right-width: 0;
+            padding: 2px 3px;
+
+            &:last-child {
+                border-right-width: 1px;
+            }
+        }
+
+        input,
+        select {
+            border-radius: 1px;
+            font-weight: normal;
+            width: 100%;
+        }
+
+        input {
+            padding: 2px 6px;
+        }
+
+        select {
+            padding: 1px 2px;
+        }
+    }
+
     tbody tr {
         background-color: #fbfbfb;
     }
@@ -464,30 +496,6 @@ table.dataTable {
 
         &.ui-state-disabled {
             opacity: 1;
-        }
-    }
-
-    thead.filter {
-
-        th {
-            background-color: inherit;
-            background-image: none;
-            padding: 2px 3px;
-        }
-
-        input,
-        select {
-            border-radius: 1px;
-            font-weight: normal;
-            width: 100%;
-        }
-
-        input {
-            padding: 2px 6px;
-        }
-
-        select {
-            padding: 1px 2px;
         }
     }
 }
